<resources>
    <string name="app_name">Burpple</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search e.g. Japanese in Orchard</string>
    <string name="txt_guide">Burpple Guides</string>
    <string name="txt_add">add</string>
    <string name="txt_see_more">See More</string>
    <string name="txt_meal_name"><![CDATA[Wildfire chicken & Chicken]]></string>
    <string name="txt_promotion">Promotions</string>
    <string name="txt_explore">Explore</string>
    <string name="txt_all_guide">All Guides</string>
    <string name="txt_activity">Activity</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_news"><![CDATA[News & Trending]]></string>
    <string name="guide_title"><![CDATA[Best Places for BBQ & Grills in Singapore 2018]]></string>
    <string name="guide_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="burpple_guides">Burpple Guides</string>


    <array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>

</resources>
