<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.padc.nyinyi.padcburppleapp.activities.GuideDetailActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium">
            <LinearLayout
                android:id="@+id/ll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">
                <TextView
                    android:id="@+id/tv_burpple_guide_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_title"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@color/primary_text"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_burpple_guide_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_detail"
                    android:textSize="@dimen/text_regular_2x"
                    android:gravity="center"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_burpple_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/ll_view"
                android:src="@drawable/burpple_logo"/>
            <TextView
                android:id="@+id/tv_burpple_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burpple_guides"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x"
                android:layout_below="@id/ll_view"
                android:layout_toEndOf="@id/iv_burpple_logo"
                android:layout_margin="@dimen/margin_medium"
                />
            <TextView
                android:id="@+id/tv_share_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SHARE LIST"
                style="@style/AccentButton"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ll_view"
                android:padding="@dimen/margin_medium"
                android:layout_margin="@dimen/margin_medium"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
