<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.padc.nyinyi.padcburppleapp.components.ViewPagerCustomDuration
                android:id="@+id/vp_highlight_images"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true" />

            <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_medium_2"
                app:piv_animationType="worm"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_radius="4sp"
                app:piv_selectedColor="@color/primary"
                app:piv_unselectedColor="@color/divider"
                app:piv_viewPager="@id/vp_highlight_images" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appBarSize"
                android:minHeight="?attr/actionBarSize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_medium_2"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_marginRight="@dimen/margin_medium_2"
                    android:layout_marginTop="69dp"
                    android:background="@drawable/bg_round_white"
                    android:drawablePadding="@dimen/margin_medium"
                    android:drawableStart="@drawable/ic_search_24dp"
                    android:elevation="4dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/margin_medium_2"
                    android:text="@string/search"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_regular_2x" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:text="@string/app_name"
                    android:textColor="@color/pure_white"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />


            </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:paddingBottom="@dimen/margin_medium_2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tv_promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/txt_promotion"
                android:textColor="@color/pure_dark"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/iv_see_more_promotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/txt_see_more"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_promotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_promotion"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/margin_medium_2"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium_2" />

            <TextView
                android:id="@+id/tv_burpple_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_promotion"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/txt_guide"
                android:textColor="@color/pure_dark"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/iv_see_more_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/rv_promotion"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/txt_see_more"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_burpple_guide"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/margin_medium_2"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium_2" />

            <TextView
                android:id="@+id/tv_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_guide"
                android:layout_margin="@dimen/margin_medium_2"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/txt_news"
                android:textColor="@color/pure_dark"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_news"
                android:layout_margin="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_large"
                android:weightSum="2">

                <include
                    layout="@layout/view_item_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1" />

                <include
                    layout="@layout/view_item_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:id="@+id/v_line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll_news"
                android:background="@color/divider"
                android:paddingTop="@dimen/margin_medium_2" />

            <TextView
                android:id="@+id/tv_neighbourhoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_line1"
                android:layout_margin="@dimen/margin_medium"
                android:drawablePadding="@dimen/margin_medium_2"
                android:drawableStart="@drawable/ic_location_24dp"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium_2"
                android:paddingRight="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium"
                android:text="Explore Neighbourhoods"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <View
                android:id="@+id/v_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_neighbourhoods"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_line2"
                android:layout_margin="@dimen/margin_medium"
                android:drawablePadding="@dimen/margin_medium_2"
                android:drawableStart="@drawable/ic_category_24dp"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium_2"
                android:paddingRight="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium"
                android:text="Explore Categories"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_regular_2x" />

            <View
                android:id="@+id/v_line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_category"
                android:background="@color/divider" />


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</android.support.design.widget.CoordinatorLayout>